--- a/DrawingTaggingPad/DrawingTaggingPad/Base.lproj/Main.storyboard
+++ b/DrawingTaggingPad/DrawingTaggingPad/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2gF-xK-2QE" customClass="Board" customModule="DrawingTaggingPad" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2gF-xK-2QE">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
@@ -120,6 +120,8 @@
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="board" destination="2gF-xK-2QE" id="Bcw-GJ-2nV"/>
+                        <outlet property="drawGraph" destination="2gF-xK-2QE" id="ZTh-rq-YE9"/>
+                        <outlet property="imageView" destination="2gF-xK-2QE" id="NB1-iB-lIC"/>
                         <outlet property="redoButton" destination="XlM-wO-Zfe" id="CF8-me-kPf"/>
                         <outlet property="toolbar" destination="UNj-IT-0zp" id="q6r-nx-5rd"/>
                         <outlet property="toolbarConstraintBottom" destination="Q3W-5k-Vcq" id="vuE-aJ-FXM"/>
